# sync_vs_async

./: .gitignore  Makefile  README.md  pyproject.toml  supervisord.conf
src/django_sync_or_async/: asgi.py  locust.py  manage.py  settings.py  utils.py  views.py  worker.py  wsgi.py
src/django_sync_or_async/templates/django_sync_or_async/: index.html
src/django_sync_or_async/urls/: api.py  async.py  gevent.py  sync.py
