[build-system]
requires = ["setuptools >= 64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "django-sync-or-async"
description = "Django sync or async, that's the question"
version = "0.0.1"
license = { text = "Proprietary" }
requires-python = ">=3.12"
authors = [{name = "Martijn Jacobs", email = "maerteijn@gmail.com"}]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.1",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
  "Django ~= 5.1",
  "uWSGI == 2.0.28",
  "uwsgitop == 0.12",
  "uvicorn ==0.34",
  "ruff == 0.8.5",
  "httpx == 0.28.1",
  "locust == 2.32.5",
  "gunicorn == 23.0.0",
  "gevent == 24.11.1",
  "supervisor == 4.2.5"
]

[project.scripts]
"manage.py" =  "django_sync_or_async.manage:main"


[tool.ruff]
target-version = "py312"  # minimum target version

# E501: Line too long
# C408: Unnecessary `dict` call
# F405: Star imports
lint.ignore = ["E501", "C408", "F405"]

lint.select = [
    "E", # pycodestyle errors
    "F", # pyflakes
    "I", # isort
    "T20", # flake8-print
    "BLE", # flake8-blind-except
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

